--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,18 @@
 
     <dependencies>
 
+
+
+            <!-- requied start -->
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>2.4</version>
+                <scope>provided</scope>
+            </dependency>
+            <!-- requied end -->
+
+
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
